# cfdb_free_ml_project

./: .env.example  .gitignore  CLAUDE.md  README.md  copilot-instructions.md  databricks.yml  pyproject.toml
docs/: cfdb_data_guide.md
mcp_server/: .env.example  README.md  requirements.txt  server.py  setup.sh  test.sh  test_custom_mcp.py  test_server.py
project_notes/: 2025-09-01_SETUP_SESSION_SUMMARY.md  SETUP_SESSION_SUMMARY.md
resources/: dlt_pipeline.yml
resources/common/: dashboards.yml  experiments.yml  jobs.yml  pipelines.yml  quality_monitors.yml
resources/dev/: overrides.yml
resources/prod/: overrides.yml
scripts/: deploy.sh  run_tests.py  unity_catalog_setup.sql
src/dashboards/: README.md
src/dlt_pipeline/explorations/: bronze_data_exploration.sql
src/dlt_pipeline/transformations/bronze/: advanced_game_stats_bronze.py  advanced_season_stats_bronze.py  conferences_bronze.py  game_drives_bronze.py  game_stats_bronze.py  games_bronze.py  plays_bronze.py  season_stats_bronze.py  teams_bronze.py
src/dlt_pipeline/transformations/gold/: dim_team_season_performance_gold.py  fact_game_predictions_gold.py  teams_gold.sql
src/dlt_pipeline/transformations/silver/: dim_conferences_silver.py  fact_advanced_game_stats_silver.py  fact_advanced_season_stats_silver.py  fact_drives_silver.py  fact_game_stats_silver.py  fact_games_silver.py  fact_season_stats_silver.py  teams_silver.py
src/ml/: __init__.py
src/ml/features/: README.md
src/ml/inference/: README.md
src/ml/training/: README.md
src/notebooks/: README.md
targets/: dev.yml  prod.yml
tests/: conftest.py
